# Cloudflare-Gateway-Pihole-Rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  custom_whitelist.txt  lists.txt  microsoft_whitelist.txt  whitelists.txt
.cargo/: config.toml
.github/workflows/: main.yml  release.yml
src/: cloudflare.rs  main.rs  utils.rs
