[package]
name = "cloudflare_gateway_pihole"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
idna = "0.4.0"
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
