[package]
name = "cloudflare_gateway_pihole"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3.30"
idna = "^0.5"
itertools = "0.12.0"
once_cell = "^1.18.0"
regex = "^1.10.3"
reqwest = { version = "^0.11", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
codegen-units = 1
lto = "fat"
