[package]
name = "cloudflare_gateway_pihole"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3.31"
idna = "^1.0"
itertools = "0.14.0"
once_cell = "^1.20.3"
regex = "^1.11.1"
reqwest = { version = "^0.12", features = ["json", "native-tls"] }
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"
